feat: Implement complete SureWork ERP platform (Phases 2-13)
Complete implementation of South African SME ERP platform with full
statutory compliance (BCEA, POPI Act, SARS, UIF/SDL).

## Microservices Architecture (10 services)
- api-gateway: Spring Cloud Gateway with JWT auth, rate limiting
- eureka-server: Service discovery and registration
- admin-service: Multi-tenant management, RBAC, audit logging
- employee-service: Employee lifecycle, SA ID validation, tax
- leave-service: BCEA-compliant leave (annual, sick, family, maternity)
- payroll-service: PAYE, UIF 1%, SDL 1%, IRP5/EMP201/EMP501
- accounting-service: GL, AP, AR, bank reconciliation
- recruitment-service: Job postings, applications, interviews
- time-attendance-service: Clock in/out, shifts, overtime
- document-service: S3 storage, templates, POPI retention
- reporting-service: HR/Payroll analytics, statutory reports

## Shared Libraries
- common-dto: Base entities, audit logging
- common-messaging: Kafka domain events
- common-security: JWT, multi-tenant routing, RBAC
- common-web: Exception handling, API responses
- common-testing: Testcontainers, test utilities

## Frontend (Angular 18)
- NgRx state management
- Lazy-loaded feature modules
- PWA support
- Responsive Material Design

## Infrastructure
- Docker Compose with all services
- PostgreSQL 16 with per-service databases
- Redis for caching and rate limiting
- Apache Kafka for async events
- MinIO for S3-compatible document storage
- Flyway database migrations

## South African Compliance
- BCEA leave entitlements (15 days annual, 30 days sick/3yr)
- SARS tax tables and calculations
- UIF/SDL deductions
- EMP201/EMP501 submissions
- IRP5 certificate generation
- POPI Act data retention policies
- EEA2/EEA4 employment equity reports

## Development Tools
- Makefile with common commands
- .env.example for configuration
- CI/CD workflow (GitHub Actions)
- Multi-stage Dockerfiles

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>